qa/apps/report-api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: report-api
  name: report-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: report-api
  template:
    metadata:
      labels:
        app: report-api
    spec:
      imagePullSecrets:
      - name: images-pull
      volumes:
      - name: ingress-ca-certificate
        secret:
          secretName: report-api-ca-certificate
          defaultMode: 0555
      containers:
      - image: index.docker.io/ferlabcrsj/api-portal-reports:d2edd009ccfb17790e0e59831a537cd3628729ec-1679691313 # {"$imagepolicy": "cqdg-qa-fluxcd:report-api"}
        name: report-api
        volumeMounts:
        - name: ingress-ca-certificate
          mountPath: /opt/ca
          readOnly: true
        - name: ca-bundle
          mountPath: /opt/ca-bundle
          readOnly: true
        resources:
          requests:
            memory: "1024Mi"
            cpu: '1.00'
          limits:
            memory: "2048Mi"
            cpu: '2.00'
