qa/apps/report-api/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: report-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-expose-headers: "Content-Disposition"

spec:
  tls:
    - hosts:
        - report-api.qa.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: report-api.qa.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: report-api
            servicePort: 4000
